        Bug 22137: PLATFORM(MAC) build broken with HAVE(ACCESSIBILITY) disabled

<https://bugs.webkit.org/show_bug.cgi?id=22137>

        Reviewed by Darin Adler.

WebCore:

        * page/AccessibilityObject.h:
        (WebCore::AccessibilityObject::accessibilityIgnoreAttachment):
        Provide a default implementation when HAVE(ACCESSIBILITY) is false.
        * page/mac/AXObjectCacheMac.mm: Added HAVE(ACCESSIBILITY) guard.
        * page/mac/AccessibilityObjectMac.mm: Ditto.
        * page/mac/AccessibilityObjectWrapper.mm: Ditto.

WebKit/mac:

        * WebView/WebFrame.mm:
        (-[WebFrame _accessibilityTree]): Return nil if HAVE(ACCESSIBILITY)
        is false.

Canonical link: https://commits.webkit.org/30453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38235 268f45cc-cd09-0410-ab3c-d52691b4dbfc